--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# chk 00-1\n",
+        "# chk 00\n",
         "\n",
         "dev = False\n",
         "\n",
@@ -65,7 +65,7 @@
         "ERROR_LOG = \"Error\"\n",
         "MAIN = \"Main\"\n",
         "\n",
-        "os.makedirs(LOG_DIR_LOCAL, exist_ok = True)\n",
+        "os.makedirs(LOG_DIR_LOCAL, exist_ok=True)\n",
         "def append_lines(filename, lines = None):\n",
         "    if lines:\n",
         "        try:\n",
@@ -380,7 +380,6 @@
         "                title = find_title(title_raw, year_raw)      \n",
         "                config.watched_movies_list.append(title)\n",
         "        info(f\"Scrapped watched movies: {len(config.watched_movies_list)} movie.\")\n",
-        "        appstate.watchedlistready = True\n",
         "    except Exception as e:\n",
         "        error(ex())\n",
         "    \n",
@@ -957,9 +956,9 @@
         "temp_save=\"/content/d-0\" \n",
         "added_path = \"/content/added\"\n",
         "if IS_ENV_COLAB:\n",
-        "    os.makedirs(done_path, exist_ok = True)\n",
-        "    os.makedirs(added_path, exist_ok = True) \n",
-        "    os.makedirs(temp_save, exist_ok = True)\n",
+        "    os.makedirs(done_path, exist_ok=True)\n",
+        "    os.makedirs(added_path, exist_ok=True) \n",
+        "    os.makedirs(temp_save, exist_ok=True)\n",
         "\n",
         "path_movie = lambda mv: config.movies_path + \"/\" + mv\n",
         "path_tvshow = lambda tvshow: config.tv_path + \"/\" + tvshow\n",
@@ -1170,7 +1169,6 @@
         "    season = \"\"\n",
         "    existing_dir = \"\"\n",
         "    existing_path = \"\"\n",
-        "    existing_file = \"\"\n",
         "    baksv = None\n",
         "    year = 0\n",
         "    imdb_rating = \"\"\n",
@@ -1197,15 +1195,15 @@
         "    hasmetadata = False\n",
         "    addmethod = None\n",
         "    \n",
-        "    def copy(this):\n",
-        "        return DownloadAttrs(type_= this.type_,\n",
-        "                    replace= this.replace,\n",
-        "                    backup= this.backup,\n",
-        "                    sequential= this.sequential,\n",
-        "                    uncomplete_source= this.uncomplete_source,\n",
-        "                    imdb_name= this.imdb_name,\n",
-        "                    imdb_rating= this.imdb_rating,\n",
-        "                    imdb_votes= this.imdb_votes)\n",
+        "    def copy(self):\n",
+        "        return DownloadAttrs(type_= self.type_,\n",
+        "                    replace= self.replace,\n",
+        "                    backup= self.backup,\n",
+        "                    sequential= self.sequential,\n",
+        "                    uncomplete_source= self.uncomplete_source,\n",
+        "                    imdb_name= self.imdb_name,\n",
+        "                    imdb_rating= self.imdb_rating,\n",
+        "                    imdb_votes= self.imdb_votes)\n",
         "\n",
         "class DownloadFile():\n",
         "    def __init__(self, index, name, size, selected = True):\n",
@@ -1225,7 +1223,6 @@
         "        self.category = category\n",
         "        self.sort = sort\n",
         "        self.order = order\n",
-        "        \n",
         "    sites = None\n",
         "    search = \"\"\n",
         "    category = None\n",
@@ -1268,7 +1265,6 @@
         "        self.sitecategory = sitecategory\n",
         "        self.siteparameters = siteparameters \n",
         "        self.attrs = attrs\n",
-        "\n",
         "    keyword = \"\"\n",
         "    titletype = \"\"\n",
         "    startdate = \"\"\n",
@@ -1907,7 +1903,6 @@
         "        foundpath = searchresult['foundpath']\n",
         "        attrs.existing_dir = searchresult['founddir']\n",
         "        attrs.existing_path = foundpath\n",
-        "        attrs.existing_file = searchresult['foundfile'] \n",
         "    if not attrs.save_name:\n",
         "        attrs.save_name = newname ##\n",
         "    attrs.save_path = savepath\n",
@@ -2190,58 +2185,56 @@
         "        diritem =  ('', clean_season(path))\n",
         "        attrs.downloaded_diritems.append(diritem)\n",
         "\n",
-        "def after_shave_movie(path, newname, selectedfilenames, downloaded_diritems = []):\n",
-        "    maindircontent = next(os.walk(path))\n",
-        "    originaldiritems = [('/', maindircontent[2])]\n",
-        "    for fulldirpath in maindircontent[1]:\n",
-        "        if 'sub' in fulldirpath.lower():\n",
-        "            subspath = f\"{path}/{fulldirpath}\" \n",
-        "            originaldiritems.append((fulldirpath, next(os.walk(subspath))[2]))\n",
-        "            info(f\"Movies subtites found: {fulldirpath}\")\n",
+        "def after_shave_movie(localsavingpath, newname, selectedfilenames= [], downloaded_diritems = []):\n",
+        "    maindircontent = next(os.walk(localsavingpath))\n",
+        "    originaldiritems = [('', maindircontent[2])]\n",
+        "    for dirname in maindircontent[1]:\n",
+        "        if 'sub' in dirname.lower():\n",
+        "            subspath = f\"{localsavingpath}/{dirname}\" \n",
+        "            originaldiritems.append((dirname, next(os.walk(subspath))[2]))\n",
+        "            info(f\"Movies subtites found: {dirname}\")\n",
         "            break\n",
         "    try:\n",
         "        for diritem in originaldiritems:\n",
-        "            newdiritem = (diritem[0], [])\n",
-        "            srtcount = 0\n",
-        "            fulldirpath =  f\"{path}/{diritem[0]}/\" if diritem[0] else f'{path}/'\n",
-        "            info(f\"Checking dir at {fulldirpath}\")\n",
-        "            for filename in diritem[1]:\n",
-        "                if filename in selectedfilenames:\n",
+        "            originalfilenames = diritem[1].copy()\n",
+        "            diritem[1].clear()\n",
+        "            srtfilecount = 0\n",
+        "            dirpath =  f\"{localsavingpath}/{diritem[0]}/\" if diritem[0] else f'{localsavingpath}/'\n",
+        "            info(f\"Checking dir at {dirpath}\")\n",
+        "            for filename in originalfilenames:\n",
+        "                if filename in selectedfilenames or not selectedfilenames:\n",
         "                    suffix = ''\n",
         "                    filename_split = os.path.splitext(filename)\n",
         "                    filenamewithoutextension = filename_split[0]\n",
         "                    fileextension = filename_split[1].lower()\n",
-        "                    originalfilepath = fulldirpath + filename\n",
+        "                    originalfilepath = dirpath + filename\n",
         "                    if any(contains(filename, check) for check in skip_list):\n",
         "                        info(f\"Deleting: {originalfilepath}\")\n",
         "                        cmd = f'rm \"{originalfilepath}\"'\n",
         "                        !$cmd\n",
-        "                        continue\n",
         "                    elif  (fileextension == \".mp4\" or fileextension == \".mkv\" or fileextension in subtitlefile_extensions):\n",
         "                        if fileextension in subtitlefile_extensions: \n",
-        "                            langsearch = langs_pt.findall(filenamewithoutextension)     #if digitssuff_pt.split(filenamewithoutextension)[0] != newname:\n",
-        "                            if langsearch:\n",
-        "                                suffix = f\".{title(langsearch[-1])}\" \n",
+        "                            langsearch = langs_pt.findall(filenamewithoutextension)\n",
+        "                            if langsearch:  suffix = f\".{title(langsearch[-1])}\" \n",
         "                            else:\n",
-        "                                srtcount += 1\n",
-        "                                suffix = f\"-{srtcount}\"\n",
+        "                                suffix = f\"-{srtfilecount}\" if srtfilecount else ''\n",
+        "                                srtfilecount += 1\n",
         "                        if filenamewithoutextension != newname:\n",
         "                            filenewname = newname + suffix + fileextension\n",
-        "                            info(f\"Renaming: {originalfilepath[36:]} to {filenewname}\")\n",
-        "                            renamedfile = fulldirpath + filenewname\n",
-        "                            cmd = f'mv \"{originalfilepath}\" \"{renamedfile}\"'\n",
+        "                            info(f\"Renaming: {filename} to {filenewname}\")\n",
+        "                            renamedfilepath = dirpath + filenewname\n",
+        "                            cmd = f'mv \"{originalfilepath}\" \"{renamedfilepath}\"'\n",
         "                            !$cmd\n",
         "                            filename = filenewname\n",
-        "                        newdiritem[1].append(filename)\n",
-        "            downloaded_diritems.append(newdiritem)\n",
+        "                        diritem[1].append(filename)\n",
+        "            downloaded_diritems.append(diritem)\n",
+        "        release()\n",
+        "        return True\n",
         "    except:\n",
         "        error(ex())\n",
         "        release()\n",
         "        return False\n",
-        "    else:\n",
-        "        release()\n",
-        "        return True\n",
-        "    if cmd: pass\n",
+        "    cmd\n",
         "\n",
         "def clean_movies_dir(movie_path= config.movies_path, v= False, backup= False, delete_empty = False, clean = True) :\n",
         "    dir_content = filter_checks(next(os.walk(movie_path))[1])\n",
@@ -3304,7 +3297,7 @@
         "def makedirs(path, backup = False):\n",
         "    if path:\n",
         "        info(f\"Creating dir: {path}\")\n",
-        "        os.makedirs(path, exist_ok = True)\n",
+        "        os.makedirs(path, exist_ok=True)\n",
         "    if backup and False: #fixbackup\n",
         "        for i in range(1, 4):\n",
         "            nd = \"bk path\"\n",
@@ -3312,7 +3305,7 @@
         "            check = check_sd_base(np)\n",
         "            if check:\n",
         "                info(f\"Creating backup dir: {np}\")\n",
-        "                os.makedirs(nd, exist_ok = True)\n",
+        "                os.makedirs(nd, exist_ok=True)\n",
         "            else:\n",
         "                warning(f\"{nd[0]} doesn't exist.\")\n",
         "\n",
@@ -3426,7 +3419,7 @@
         "\n",
         "#### API / Download files utils\n",
         "\n",
-        "def clean_download_old_files(attrs: DownloadAttrs): #disabled temporarly \n",
+        "def move_download_old_files(attrs: DownloadAttrs): #disabled temporarly \n",
         "    info(f'Cleaning distination for: {attrs.save_name}')\n",
         "    attrs.old_files = set()\n",
         "    delstr = '.del' + nowstr()\n",
@@ -3434,13 +3427,12 @@
         "        for diritem in attrs.downloaded_diritems: #diritem is tuple of a dir and its content\n",
         "            season = get_season(diritem[0])\n",
         "            if season:\n",
-        "                for file in diritem[1]:\n",
-        "                    lookup1 = episode_exists(attrs.show, season, file)\n",
+        "                for filename in diritem[1]:\n",
+        "                    lookup1 = episode_exists(attrs.show, season, filename)\n",
         "                    if lookup1:\n",
         "                        oldfilepath = lookup1['foundpath']\n",
         "                        oldfiletemppath = os.path.dirname(oldfilepath) + '/' + delstr\n",
-        "                        if not os.path.isdir(oldfiletemppath):\n",
-        "                            os.makedirs(oldfiletemppath)\n",
+        "                        if not os.path.isdir(oldfiletemppath):     os.makedirs(oldfiletemppath)\n",
         "                        info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
         "                        cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
         "                        output = !$cmd\n",
@@ -3448,64 +3440,65 @@
         "                        attrs.old_files.add(oldfiletemppath)\n",
         "                        info(f'Old file added: {lookup1[\"foundname\"]}')\n",
         "                        if attrs.backup and attrs.baksv: #fixbackup\n",
-        "                            for i in range(len(attrs.baksv)):\n",
-        "                                oldfilepath = \"bk\"\n",
+        "                            for bkdir in range(len(attrs.baksv)):\n",
+        "                                oldfilepath = f\"{bkdir}/filename\"       #TODO\n",
         "                                if os.path.exists(oldfilepath):\n",
         "                                    oldfiletemppath = \"bk\"\n",
-        "                                    if not os.path.isdir(oldfiletemppath):\n",
-        "                                        os.makedirs(oldfiletemppath)\n",
+        "                                    if not os.path.isdir(oldfiletemppath):      os.makedirs(oldfiletemppath)\n",
         "                                    info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
         "                                    cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
         "                                    output = !$cmd \n",
         "                                    if output:  info(lines = output)\n",
         "\n",
-        "    elif attrs.type_ == MOVIE:       ### not selected files should be replaced\n",
-        "        oldfilepath = attrs.existing_file \n",
-        "        oldfiletemppath = attrs.existing_dir + '/' + delstr\n",
-        "        os.makedirs(oldfiletemppath, exist_ok = True)\n",
-        "        info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
-        "        cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
-        "        output = !$cmd\n",
-        "        if output:  error(lines = output)\n",
-        "        attrs.old_files.add(oldfiletemppath)\n",
-        "        info(f'Old file added: {attrs.existing_file}')\n",
-        "        if attrs.backup and attrs.baksv: #fixbackup\n",
-        "            for oldfilepath in len(attrs.baksv):\n",
-        "                if os.path.exists(oldfilepath):\n",
-        "                    oldfiletemppath = \"bk\"\n",
-        "                    if not os.path.isdir(oldfiletemppath):\n",
-        "                        os.makedirs(oldfiletemppath)\n",
-        "                    info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
-        "                    cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
-        "                    output = !$cmd\n",
-        "                    if output:  info(lines = output)\n",
+        "    elif attrs.type_ == MOVIE:       \n",
+        "        for diritem in attrs.downloaded_diritems:\n",
+        "            targetdir = f\"{attrs.existing_dir}/{diritem[0]}\"\n",
+        "            os.makedirs(oldfiletemppath, exist_ok=True)\n",
+        "            for filename in diritem[1]:\n",
+        "                oldfilepath = f\"{targetdir}/{filename}\"\n",
+        "                oldfiletemppath = f\"{targetdir}/{delstr}\"\n",
+        "                info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
+        "                cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
+        "                output = !$cmd\n",
+        "                if output:  error(lines = output)\n",
+        "                attrs.old_files.add(oldfiletemppath)\n",
+        "                info(f'Old file added: {oldfilepath}')\n",
+        "                if attrs.backup and attrs.baksv:                                #fixbackup\n",
+        "                    for oldfilepath in len(attrs.baksv):\n",
+        "                        if os.path.exists(oldfilepath):\n",
+        "                            oldfiletemppath = \"bk\"\n",
+        "                            if not os.path.isdir(oldfiletemppath):\n",
+        "                                os.makedirs(oldfiletemppath)\n",
+        "                            info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
+        "                            cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
+        "                            output = !$cmd\n",
+        "                            if output:  info(lines = output)\n",
         "    else:\n",
         "        return \n",
         "    info('Cleaning distination done.')\n",
         "    cmd = ''\n",
         "    if cmd: pass\n",
         "    \n",
-        "def pre_download_transfer(attrs: DownloadAttrs, path):\n",
+        "def pre_download_file_transfer(attrs: DownloadAttrs, donesavingpath):\n",
+        "    info(f\"Preparing transfer for: {donesavingpath}\\nSave dir: {attrs.target_save_dir}\\nFile transfer verification items:\")\n",
         "    attrs.verify_download = []\n",
-        "    info(f\"Preparing transfer for: {path}\\nSave dir: {attrs.target_save_dir}\")\n",
-        "    size = 0 \n",
-        "    info(\"File transfer verification items.\")\n",
-        "    itemstr = \"\"\n",
-        "    for item in attrs.downloaded_diritems:\n",
-        "        p01 = '/' + item[0] if item[0] else ''\n",
-        "        base = path + p01\n",
-        "        to_base = attrs.target_save_dir + p01\n",
-        "        itemstr += f\"In dir:  .{base}/\"\n",
-        "        for file in item[1]:\n",
-        "            p02 = base + '/' + file\n",
-        "            s01 = pathsize(p02)\n",
-        "            size += s01\n",
-        "            p03 = to_base + '/' + file\n",
-        "            attrs.verify_download.append((p02, p03))\n",
-        "            sizestr = data_str(s01)\n",
-        "            itemstr += f'({sizestr}) {p02}\\n{len(sizestr) * \" \"} {p03}'\n",
-        "    info(itemstr)\n",
-        "    DownloadAttrs.total_downloaded = size \n",
+        "    total_size = 0 \n",
+        "    diritems_str = \"\"\n",
+        "    for diritem in attrs.downloaded_diritems:\n",
+        "        dirbase = f\"/{diritem[0]}\" if diritem[0] else ''\n",
+        "        donedirpath = donesavingpath + dirbase\n",
+        "        savingtargetdirpath = attrs.target_save_dir + dirbase\n",
+        "        diritems_str += f\"In dir:  .{donedirpath}/\\n\"\n",
+        "        for filename in diritem[1]:\n",
+        "            donefilepath = f\"{donedirpath}/{filename}\"\n",
+        "            targetfilepath = f\"{savingtargetdirpath}/{filename}\"\n",
+        "            attrs.verify_download.append((donefilepath, targetfilepath))\n",
+        "            filesize = pathsize(donefilepath)\n",
+        "            sizestr = data_str(filesize)\n",
+        "            total_size += filesize\n",
+        "            diritems_str += f'({sizestr}) {donefilepath}\\n{len(sizestr)*\" \"} {targetfilepath}\\n'\n",
+        "    info(diritems_str)\n",
+        "    attrs.total_downloaded = total_size \n",
         "\n",
         "def verify_saving_download(attrs: DownloadAttrs):\n",
         "    fails = []\n",
@@ -3539,17 +3532,17 @@
         "    handle.pause()\n",
         "    attrs: DownloadAttrs = handle.attrs\n",
         "    status = handle.status()\n",
-        "    name = status.name\n",
-        "    localsavingpath = status.save_path + \"/\" + name\n",
+        "    downloadname = status.name\n",
+        "    localsavingpath = f'{status.save_path}/{downloadname}'\n",
         "    localsavedpath = status.save_path\n",
-        "    donesavepath = done_path + \"/\" + attrs.save_name\n",
-        "    info(f'Transfering files for: {name}\\nNewname: {attrs.save_name}')\n",
+        "    donesavingpath = done_path + \"/\" + attrs.save_name\n",
+        "    info(f'Transfering files for: {downloadname}\\nNewname: {attrs.save_name}')\n",
         "    if os.path.exists(localsavingpath):\n",
         "        hasnodir = not os.path.isdir(localsavingpath)\n",
-        "        if hasnodir: #move all dirless files here\n",
+        "        if hasnodir: #move all dirless files here. Ensures that localsavingpath is a dir, not dirless file.\n",
         "            info(f'The download doesnt have a directory\\nMoving download files into a directory with the same name.')\n",
-        "            localsavedpath = status.save_path + \"/\" + os.path.splitext(name)[0]\n",
-        "            os.makedirs(localsavedpath, exist_ok = True)\n",
+        "            localsavedpath = status.save_path + \"/\" + os.path.splitext(downloadname)[0]\n",
+        "            os.makedirs(localsavedpath, exist_ok=True)\n",
         "            files = handle.torrent_file().files()\n",
         "            for i in range(files.num_files()):\n",
         "                file_path = status.save_path + \"/\" + files.file_path(i)\n",
@@ -3565,43 +3558,44 @@
         "        if not clean_download(attrs, path= localsavingpath):\n",
         "            error(\"An error occured during cleaning the download.\")\n",
         "        if (not copy) or hasnodir:\n",
-        "            info(f'Moving to done path with the new name\\n {localsavingpath} to {donesavepath}')\n",
-        "            cmd = f'mv \"{localsavingpath}\" \"{donesavepath}\"'\n",
+        "            info(f'Moving to done path with the new name\\n {localsavingpath} to {donesavingpath}')\n",
+        "            cmd = f'mv \"{localsavingpath}\" \"{donesavingpath}\"'\n",
         "        else:\n",
-        "            info(f'Copying to done path with the new name\\n {localsavingpath} to {donesavepath}')  \n",
-        "            cmd = f'cp -r \"{localsavingpath}\" \"{donesavepath}\"'\n",
+        "            info(f'Copying to done path with the new name\\n {localsavingpath} to {donesavingpath}')  \n",
+        "            cmd = f'cp -r \"{localsavingpath}\" \"{donesavingpath}\"'\n",
         "        !$cmd\n",
         "    else:\n",
-        "        m = f\"Download dir or file is missing {localsavingpath} \"\n",
-        "        error(m)\n",
+        "        error(f\"Download dir or file is missing {localsavingpath} \")\n",
         "        release()\n",
         "    if not attrs.save_name:\n",
-        "        attrs.save_name = name\n",
-        "        donesavepath = donesavepath + attrs.save_name \n",
+        "        attrs.save_name = downloadname\n",
+        "        donesavingpath = donesavingpath + attrs.save_name \n",
         "\n",
-        "    pre_download_transfer(attrs, donesavepath)  \n",
-        "    if attrs.type_ == EPISODE and os.path.isdir(donesavepath):\n",
-        "        donesavepath = donesavepath + \"/\"     \n",
-        "    if os.path.exists(donesavepath):\n",
-        "        #if attrs.replace and attrs.downloaded_diritems: clean_download_destination(attrs) #TODO\n",
+        "    pre_download_file_transfer(attrs, donesavingpath)  \n",
+        "    if attrs.type_ == EPISODE and os.path.isdir(donesavingpath):\n",
+        "        donesavingpath = f'{donesavingpath}/' \n",
+        "    if os.path.exists(donesavingpath):\n",
+        "        if attrs.replace and attrs.downloaded_diritems: \n",
+        "            move_download_old_files(attrs) \n",
         "        info(f'Saving {attrs.save_name} to: {attrs.save_path}')\n",
-        "        cmd = f'rsync --size-only -r \"{donesavepath}\" \"{attrs.save_path}\"'\n",
-        "        output0001 = !$cmd\n",
-        "        if output0001:\n",
-        "            error(lines= output0001)\n",
+        "        merge_mode = \"--size-only \" if not attrs.replace else '' # -I for replacing files \n",
+        "        cmd = f'rsync {merge_mode}-r \"{donesavingpath}\" \"{attrs.save_path}\"'\n",
+        "        output = !$cmd\n",
+        "        if output:\n",
+        "            error(lines= output)\n",
         "            main_verification = False\n",
         "        else:\n",
         "            main_verification = verify_saving_download(attrs)   \n",
         "        if attrs.backup and attrs.baksv:\n",
         "            for bkpath in attrs.baksv:\n",
         "                info(f'Copying {attrs.save_name} to: {bkpath}')\n",
-        "                cmd = f'!rsync --size-only -r \"{donesavepath}\" \"{bkpath}\"'\n",
-        "                output0001= !$cmd\n",
-        "                if output0001:\n",
-        "                    error(lines= output0001)\n",
+        "                cmd = f'!rsync {merge_mode}-r \"{donesavingpath}\" \"{bkpath}\"'\n",
+        "                output= !$cmd\n",
+        "                if output:\n",
+        "                    error(lines= output)\n",
         "        if main_verification:\n",
-        "            info(f'Deleting {donesavepath}')\n",
-        "            cmd = f'rm -r \"{donesavepath}\"' \n",
+        "            info(f'Deleting {donesavingpath}')\n",
+        "            cmd = f'rm -r \"{donesavingpath}\"' \n",
         "            !$cmd\n",
         "            if attrs.uncomplete_source and os.path.exists(attrs.uncomplete_source):\n",
         "                info(f'Deleting uncompleted source: {attrs.uncomplete_source}')\n",
@@ -3628,7 +3622,7 @@
         "    status = handle.status()\n",
         "    name = status.name\n",
         "    info(f\"Saving download progress for {name}\")\n",
-        "    os.makedirs(savepath, exist_ok = True)\n",
+        "    os.makedirs(savepath, exist_ok=True)\n",
         "    p0 = temp_save +\"/\"+ name\n",
         "    p1 = f\"{savepath}/{name}\"\n",
         "    if os.path.exists(p1):\n",
@@ -3637,33 +3631,6 @@
         "    print(\"\\nSaving {0} into    {1}\\n\".format(name, p1))\n",
         "    !cp -r \"$p0\" \"$p1\"\n",
         "    info(f\"Done saving download progress for {name}.\")\n",
-        "  \n",
-        "def save_downloads_progress(savepath):\n",
-        "    if active:\n",
-        "        print(\" Choose a download to save progress , q to exit:\\n\")\n",
-        "        for i in range(len(active)):\n",
-        "            print(\"   {0}-  {1}\".format(i+1, active[i].name))\n",
-        "        print()\n",
-        "        inpt =  input().lower()\n",
-        "        if inpt == '' or inpt == \" \" or inpt == 'q' or inpt == \"s\":\n",
-        "            return\n",
-        "        if \",\" in inpt:\n",
-        "            choices = inpt .split(\",\")\n",
-        "        else:\n",
-        "            choices = [inpt]    \n",
-        "        for choice in choices:\n",
-        "            try:\n",
-        "                choice = int(choice) - 1\n",
-        "            except Exception as e:\n",
-        "                error(ex())\n",
-        "                updatestatushtml('An error happend while saving download.', ERROR_EVENT)\n",
-        "                continue\n",
-        "            if(choice >= len(active) or choice < 0):\n",
-        "                print(\"\\nThe choice is out of range.\\n\")\n",
-        "            else:\n",
-        "                save_download_progress(active[choice], savepath)\n",
-        "            print(\"..................\")\n",
-        "            print(\"      Done\\n\")\n",
         "\n",
         "def load_uncompleted(path, type_ = MOVIE, local = False):\n",
         "    (path, files, dirs) = next(os.walk(path))\n",
@@ -3913,8 +3880,7 @@
         "        for file in files: file.selected = False\n",
         "\n",
         "def getfileselectionwithstr(files: list[DownloadFile], selectionstr = \"\"):\n",
-        "    if not selectionstr:\n",
-        "        return False\n",
+        "    if not selectionstr:    return False\n",
         "    includefiles = set()\n",
         "    excludefiles = set()\n",
         "    seasonintervals = set()\n",
@@ -3923,41 +3889,41 @@
         "    else:\n",
         "        inputs = [selectionstr]   \n",
         "    try:\n",
-        "        for inputitem  in inputs:\n",
+        "        for inputitem in inputs:\n",
         "            inputitem = inputitem.strip()\n",
-        "            if inputitem[0] == 's' or inputitem[0] == 'S':\n",
-        "                lookup = season_pt0.search(inputitem)\n",
-        "                if lookup:\n",
-        "                    if '-' in inputitem:\n",
-        "                        range0 = inputitem.split('-')\n",
-        "                        lookup1 = season_number_pt.search(range0[0])\n",
-        "                        start = lookup1.group() if lookup1 else ''\n",
-        "                        lookup1 = season_number_pt.search(range0[1])\n",
-        "                        end = lookup1.group() if lookup1 else ''\n",
-        "                        if not (start or end): continue\n",
-        "                        elif start and end:\n",
-        "                            seasonintervals.update({f'({addseason:02})' for addseason in range(int(start), int(end)+1)})\n",
+        "            if inputitem:\n",
+        "                if inputitem[0].lower() == 's':\n",
+        "                    lookup = season_pt0.search(inputitem)\n",
+        "                    if lookup:\n",
+        "                        if '-' in inputitem:\n",
+        "                            inputrange = inputitem.split('-')\n",
+        "                            lookup1 = season_number_pt.search(inputrange[0])\n",
+        "                            start = lookup1.group() if lookup1 else ''\n",
+        "                            lookup1 = season_number_pt.search(inputrange[1])\n",
+        "                            end = lookup1.group() if lookup1 else ''\n",
+        "                            if not (start or end): continue\n",
+        "                            elif start and end:\n",
+        "                                seasonintervals.update({f'({addseason:02})' for addseason in range(int(start), int(end)+1)})\n",
+        "                            else:\n",
+        "                                addseason = int(end) if end else int(start)\n",
+        "                                seasonintervals.add(f\"({addseason:02})\")\n",
         "                        else:\n",
-        "                            addseason = int(end) if end else int(start)\n",
-        "                            seasonintervals.add(f\"({addseason:02})\")\n",
-        "                    else:\n",
-        "                        lookup1 = season_number_pt.search(inputitem)\n",
-        "                        if lookup1: seasonintervals.add(f\"({int(lookup1.group()):02})\")                \n",
+        "                            lookup1 = season_number_pt.search(inputitem)\n",
+        "                            if lookup1: seasonintervals.add(f\"({int(lookup1.group()):02})\")                \n",
         "\n",
-        "            elif inputitem.lower().startswith('n:'):\n",
-        "                inputitem = inputitem[2:]\n",
-        "                if '-' in inputitem:\n",
-        "                    range0 = inputitem.split('-')\n",
-        "                    excludefiles.update(set(range(int(range0[0])-1, int(range0[1]))))\n",
-        "                else:   excludefiles.add(int(inputitem))\n",
+        "                elif inputitem.lower().startswith('n:'):\n",
+        "                    inputitem = inputitem[2:]\n",
+        "                    if '-' in inputitem:\n",
+        "                        inputrange = inputitem.split('-')\n",
+        "                        excludefiles.update(set(range(int(inputrange[0])-1, int(inputrange[1]))))\n",
+        "                    else:   excludefiles.add(int(inputitem)-1)\n",
         "\n",
-        "            else:\n",
-        "                if '-' in inputitem :\n",
-        "                    range0 = inputitem.split('-')\n",
-        "                    includefiles.update(set(range(int(range0[0])-1, int(range0[1]))))          \n",
-        "                else:   includefiles.add(int(inputitem))\n",
-        "    except:\n",
-        "        error(ex())\n",
+        "                else:\n",
+        "                    if '-' in inputitem :\n",
+        "                        inputrange = inputitem.split('-')\n",
+        "                        includefiles.update(set(range(int(inputrange[0])-1, int(inputrange[1]))))          \n",
+        "                    else:   includefiles.add(int(inputitem)-1)\n",
+        "    except:     error(ex())\n",
         " \n",
         "    seasonselectionstr_pt =  re.compile(r\"\\b\" + f\"[Ss]({'|'.join(seasonintervals)})\" + r\"(?=[Ee]|\\s|\\.)\") if seasonintervals else None\n",
         "    includes = len(includefiles) >= 1 or bool(seasonselectionstr_pt)\n",
@@ -3970,8 +3936,7 @@
         "        elif includes:\n",
         "            if (seasonselectionstr_pt and seasonselectionstr_pt.search(seasonselectionstr_pt, file.name)) or (inputitem in includefiles):\n",
         "                file.selected = True\n",
-        "            else:\n",
-        "                file.selected = False\n",
+        "            else:   file.selected = False\n",
         "    release()\n",
         "\n",
         "def process_adddownload_result(result):\n",
@@ -5517,13 +5482,6 @@
         "    for x in trackers:\n",
         "        #print(x)\n",
         "        print(x['url'], x['tier'])\n",
-        "        \n",
-        "def save_progress(savepath):\n",
-        "    try:\n",
-        "        save_downloads_progress(savepath)\n",
-        "        release()\n",
-        "    except KeyboardInterrupt as k:\n",
-        "        k\n",
         "\n",
         "def load_download(Load_From):\n",
         "    Local = False   \n",
