--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# chk 00\n",
+        "# chk 00-1\n",
         "\n",
         "dev = False\n",
         "\n",
@@ -2174,19 +2174,21 @@
         "                !$cmd\n",
         "    if cmd: pass\n",
         "\n",
-        "def clean_download(attrs: DownloadAttrs, path):\n",
+        "def clean_download(attrs: DownloadAttrs, localsavingpath):\n",
         "    info(f\"Cleaning type: {types[attrs.type_]} name: {attrs.name}\")\n",
         "    attrs.downloaded_diritems = []\n",
         "    if attrs.type_ == MOVIE:\n",
-        "        return after_shave_movie(path, attrs.save_name, attrs.selectedfilenames, attrs.downloaded_diritems)\n",
+        "        return after_shave_movie(localsavingpath, attrs.save_name, attrs.selectedfilenames, attrs.downloaded_diritems)\n",
         "    elif attrs.type_ == SHOW:\n",
-        "        return clean_tvshow(path, diritems= attrs.downloaded_diritems)\n",
+        "        return clean_tvshow(localsavingpath, diritems= attrs.downloaded_diritems)\n",
         "    elif attrs.type_ == SEASON or attrs.type_ == EPISODE:\n",
-        "        diritem =  ('', clean_season(path))\n",
+        "        diritem =  ('', clean_season(localsavingpath))\n",
         "        attrs.downloaded_diritems.append(diritem)\n",
         "\n",
         "def after_shave_movie(localsavingpath, newname, selectedfilenames= [], downloaded_diritems = []):\n",
-        "    maindircontent = next(os.walk(localsavingpath))\n",
+        "    if not os.path.isdir(localsavingpath):\n",
+        "        raise(Exception(f\"Path isn't a dir: {localsavingpath}\\nExists: {os.path.exists(localsavingpath)}\"))\n",
+        "    maindircontent = next(os.walk(localsavingpath)) #TODO fix bug\n",
         "    originaldiritems = [('', maindircontent[2])]\n",
         "    for dirname in maindircontent[1]:\n",
         "        if 'sub' in dirname.lower():\n",
@@ -3453,10 +3455,10 @@
         "    elif attrs.type_ == MOVIE:       \n",
         "        for diritem in attrs.downloaded_diritems:\n",
         "            targetdir = f\"{attrs.existing_dir}/{diritem[0]}\"\n",
+        "            oldfiletemppath = f\"{targetdir}/{delstr}\"\n",
         "            os.makedirs(oldfiletemppath, exist_ok=True)\n",
         "            for filename in diritem[1]:\n",
         "                oldfilepath = f\"{targetdir}/{filename}\"\n",
-        "                oldfiletemppath = f\"{targetdir}/{delstr}\"\n",
         "                info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
         "                cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
         "                output = !$cmd\n",
@@ -3472,12 +3474,10 @@
         "                            info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
         "                            cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
         "                            output = !$cmd\n",
-        "                            if output:  info(lines = output)\n",
-        "    else:\n",
-        "        return \n",
+        "                            if output:  info(lines = output)         \n",
         "    info('Cleaning distination done.')\n",
-        "    cmd = ''\n",
-        "    if cmd: pass\n",
+        "    return\n",
+        "    cmd\n",
         "    \n",
         "def pre_download_file_transfer(attrs: DownloadAttrs, donesavingpath):\n",
         "    info(f\"Preparing transfer for: {donesavingpath}\\nSave dir: {attrs.target_save_dir}\\nFile transfer verification items:\")\n",
@@ -3535,7 +3535,7 @@
         "    downloadname = status.name\n",
         "    localsavingpath = f'{status.save_path}/{downloadname}'\n",
         "    localsavedpath = status.save_path\n",
-        "    donesavingpath = done_path + \"/\" + attrs.save_name\n",
+        "    donesavingpath = f\"{done_path}/{attrs.save_name}\"\n",
         "    info(f'Transfering files for: {downloadname}\\nNewname: {attrs.save_name}')\n",
         "    if os.path.exists(localsavingpath):\n",
         "        hasnodir = not os.path.isdir(localsavingpath)\n",
@@ -3555,7 +3555,7 @@
         "                !$cmd \n",
         "            localsavingpath = localsavedpath \n",
         "        shave_download(handle, localsavedpath, localsavingpath)\n",
-        "        if not clean_download(attrs, path= localsavingpath):\n",
+        "        if not clean_download(attrs, localsavingpath= localsavingpath):\n",
         "            error(\"An error occured during cleaning the download.\")\n",
         "        if (not copy) or hasnodir:\n",
         "            info(f'Moving to done path with the new name\\n {localsavingpath} to {donesavingpath}')\n",
