--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# chk 00-1\n",
+        "# chk 00 1\n",
         "\n",
         "dev = False\n",
         "\n",
@@ -44,6 +44,9 @@
         "    time.tzset()\n",
         "    from google.colab import output, drive\n",
         "    from google.colab.output import eval_js \n",
+        "    if not os.path.exists(\"/content/drive\"):\n",
+        "        with hide:\n",
+        "            drive.mount('/content/drive')\n",
         "\n",
         "ENV_OS = platform.uname().system\n",
         "if ENV_OS == WINDOWS:\n",
@@ -260,9 +263,6 @@
         "config.pkgs = get_installed_pip_pkgs()\n",
         "\n",
         "def storageandpathes():\n",
-        "    if IS_ENV_COLAB and not os.path.exists(\"/content/drive\"):\n",
-        "        with hide:\n",
-        "            drive.mount('/content/drive')\n",
         "    if os.path.exists(\"/content/drive\"):\n",
         "        info(\"Google drive is mounted.\")\n",
         "        config.driveenabled = True\n",
