--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -1167,7 +1167,7 @@
         "    uncomplete_source = \"\"\n",
         "    show = \"\"\n",
         "    season = \"\"\n",
-        "    existing_dir = \"\"\n",
+        "    existing_savingdir = \"\"\n",
         "    existing_path = \"\"\n",
         "    baksv = None\n",
         "    year = 0\n",
@@ -1901,7 +1901,7 @@
         "        res.founddir = searchresult['founddir']\n",
         "        res.foundshow = searchresult['foundshow']\n",
         "        foundpath = searchresult['foundpath']\n",
-        "        attrs.existing_dir = searchresult['founddir']\n",
+        "        attrs.existing_savingdir = searchresult['founddir']\n",
         "        attrs.existing_path = foundpath\n",
         "    if not attrs.save_name:\n",
         "        attrs.save_name = newname ##\n",
@@ -2079,7 +2079,7 @@
         "    if not name:\n",
         "        name = hash\n",
         "    download_link = f\"https://itorrents.org/torrent/{hash}.torrent\"\n",
-        "    filename = f\"/content/{title}.torrent\"\n",
+        "    filename = f\"/content/{name}.torrent\"\n",
         "    !wget \"$download_link\" -O \"$filename\" $NULL_STREAM \n",
         "    attrs.torfile = filename\n",
         "    attrs.add_source = LOCALFILE_ADDSOURCE\n",
@@ -3433,8 +3433,8 @@
         "                    lookup1 = episode_exists(attrs.show, season, filename)\n",
         "                    if lookup1:\n",
         "                        oldfilepath = lookup1['foundpath']\n",
-        "                        oldfiletemppath = os.path.dirname(oldfilepath) + '/' + delstr\n",
-        "                        if not os.path.isdir(oldfiletemppath):     os.makedirs(oldfiletemppath)\n",
+        "                        oldfiletemppath = f\"{os.path.dirname(oldfilepath)}/{delstr}\"\n",
+        "                        os.makedirs(oldfiletemppath, exist_ok=True)\n",
         "                        info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
         "                        cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
         "                        output = !$cmd\n",
@@ -3454,7 +3454,7 @@
         "\n",
         "    elif attrs.type_ == MOVIE:       \n",
         "        for diritem in attrs.downloaded_diritems:\n",
-        "            targetdir = f\"{attrs.existing_dir}/{diritem[0]}\"\n",
+        "            targetdir = os.path.normpath(f\"{attrs.existing_path}/{diritem[0]}\")\n",
         "            oldfiletemppath = f\"{targetdir}/{delstr}\"\n",
         "            os.makedirs(oldfiletemppath, exist_ok=True)\n",
         "            for filename in diritem[1]:\n",
@@ -3496,7 +3496,7 @@
         "            filesize = pathsize(donefilepath)\n",
         "            sizestr = data_str(filesize)\n",
         "            total_size += filesize\n",
-        "            diritems_str += f'({sizestr}) {donefilepath}\\n{len(sizestr)*\" \"} {targetfilepath}\\n'\n",
+        "            diritems_str += f'{sizestr} {donefilepath}\\n{(len(sizestr) + 1)*\" \"}{targetfilepath}\\n'\n",
         "    info(diritems_str)\n",
         "    attrs.total_downloaded = total_size \n",
         "\n",
@@ -4210,6 +4210,7 @@
         "            downloadvbox.status_label.value = \"Transfering files\"\n",
         "            downloadvbox.remaining_label.value = f\"Remaining {whitespace3}{data_str(0)} / {data_str(status.total_wanted)}\"\n",
         "            downloadvbox.eta_label.value = f\"Estimated {time_str(0)}\"\n",
+        "            downloadvbox.remove_btn.disabled = False\n",
         "        elif handle.done:\n",
         "            downloadvbox.progress_bar.bar_style = 'success'\n",
         "            downloadvbox.speed_label.value = f\"Completed at {whitespace3}{time.strftime('%I:%M:%S %p', time.localtime(status.completed_time))}\"\n",
